--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ div {
 </style>
 <body>
 
-<h2 style="text-align: center">In Person Attendance 2018 to Today</h2>
+<h2 style="text-align: center">In Person Attendance from Fall of 2018 to Today</h2>
 <div id="chart1"></div>
 
 <script src="src/in-person.js"></script>
