--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ div {
 </style>
 <body>
 
-<h2 style="text-align: center">In Person Attendance from Fall of 2018 to Today</h2>
+<h2 style="text-align: center">ACGSI in-person Attendance from Fall of 2018 to Today</h2>
 <div id="chart1"></div>
 
 <script src="src/in-person.js"></script>
-<h2 style="text-align: center; margin-bottom: 2em">In Person Attendance versus Zoom Attendance (Total Zoom and Allen Co. Zoom)</h2>
+<h2 style="text-align: center; margin-bottom: 2em">In-person Attendance versus Zoom Attendance (Total Zoom and Allen Co. Zoom)</h2>
 <div id="chart2" style="width:60%; margin: auto auto">
 </div>
 <script src="src/zoom-vs-inperson.js"></script>
